# pywin32cap

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: animated_app.py  demo_capture_animation.py  demo_window_capture.py
pywin32cap/: __init__.py  capture_window.py
